--- a/application/modules/game/assets/less/game.less
+++ b/application/modules/game/assets/less/game.less
@@ -57,6 +57,12 @@ body{
 	margin: 0px;
 }
 
+audio{
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+}
+
 ::-webkit-scrollbar {
     width: 12px;
 }
@@ -100,13 +106,26 @@ body{
 	max-width: 500px;
 	margin: 0 auto;
 	text-align: center;
-	padding-top: 50px;
+	// margin-top: 50px;
+	position: absolute;
+	padding: 30px;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 10px;
 	max-width: 500px;
+	background-color: #FFF; 
+
+	.init{
+		color: #000;
+		font-size: 20px;
+		cursor: pointer;
+	}
 
 	.lyrics{
 		width: 100%;
 		height: 150px;
-		margin: 5rem auto;
+		margin: 0rem auto;
 		font-size: 30px;
 		color: #333;
 		overflow: hidden;
@@ -115,6 +134,15 @@ body{
 			position: relative; 
 			transition: transform .4s;
 			top: 50%;
+
+			span{
+				&.correct{
+					color: green;
+				}
+				&.incorrect{
+					color: red;
+				}
+			}
 		}
 	}
 
@@ -135,6 +163,11 @@ body{
 			color: #333;
 			font-size: 20px; 
 			padding: 0 45px 0 15px;
+
+			&:disabled{
+				opacity: .5;
+				background-color: #FFF;
+			}
 		}
 
 		button{
